fixed close button on mobile device

--- a/themes/separate-blog/style.css
+++ b/themes/separate-blog/style.css
@@ -4232,8 +4232,8 @@ cursor: -moz-grabbing;
       height: 30px;
   }
   .moveausp .roundBtn .cross {
-      left: 15px;
-      top: 15px;
+      left: 13px;
+      top: 13px;
   }
   .moveausp .roundBtn .cross .a {
       width: 10px;
